--- a/DentalHospitalDatabase/New Patient.xaml
+++ b/DentalHospitalDatabase/New Patient.xaml
@@ -58,7 +58,7 @@
             <ComboBoxItem Content="KaiserFoundation"/>
         </ComboBox>
         <TextBox x:Name="txtIns" HorizontalAlignment="Left" Height="30" Margin="347,240,0,0" BorderThickness="0" TextWrapping="Wrap" Text="Insurance*" VerticalAlignment="Top" Width="108" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right" Focusable="False"/>
-        <TextBox x:Name="txtRQFields" HorizontalAlignment="Left" Height="23" Margin="638,294,0,0" TextWrapping="Wrap" Text="(Required Fields*)" VerticalAlignment="Top" Width="120" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Center"/>
+        <TextBox x:Name="txtRQFields" HorizontalAlignment="Left" Height="23" Margin="454,287,0,0" TextWrapping="Wrap" Text="(Required Fields*)" VerticalAlignment="Top" Width="120" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Center" RenderTransformOrigin="-1.421,0.553"/>
 
     </Grid>
     <Window.Resources>
