--- a/DentalHospitalDatabase/Doctor.xaml
+++ b/DentalHospitalDatabase/Doctor.xaml
@@ -7,13 +7,33 @@
         mc:Ignorable="d"
         Title="Doctor" Height="450" Width="800">
     <Grid Background="#FFBEEAFF">
-        <DataGrid HorizontalAlignment="Left" Height="308" Margin="202,101,0,0" VerticalAlignment="Top" Width="580"/>
+        <DataGrid HorizontalAlignment="Left" Height="289" Margin="202,101,0,0" VerticalAlignment="Top" Width="557"/>
         <Button x:Name="btnPatients" Content="Patients" HorizontalAlignment="Left" Margin="10,105,0,0" VerticalAlignment="Top" Width="175" Height="50" Background="Transparent" BorderBrush="Transparent" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="16" Click="btnPatients_Click"/>
         <Button x:Name="btnApp" Content="Appointments" HorizontalAlignment="Left" Margin="10,160,0,0" VerticalAlignment="Top" Width="175" Height="50" Background="Transparent" BorderBrush="Transparent" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="16" Click="btnApp_Click"/>
         <Button x:Name="btnDoctors" Content="Doctors" HorizontalAlignment="Left" Margin="10,215,0,0" VerticalAlignment="Top" Width="175" Height="50" Background="Transparent" BorderBrush="Transparent" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="16" Click="btnDoctors_Click"/>
         <Button x:Name="btnBilling" Content="Billing" HorizontalAlignment="Left" Margin="10,270,0,0" VerticalAlignment="Top" Width="175" Height="50" Background="Transparent" BorderBrush="Transparent" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="16" Click="btnBilling_Click"/>
         <Label Content="Medical Staff View" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="772" Height="86"  FontSize="40" FontFamily="Segoe UI Black" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-        <Button x:Name="btnLogOut" Content="Log Out" HorizontalAlignment="Left" Margin="10,378,0,0" VerticalAlignment="Top" Width="175" RenderTransformOrigin="-0.661,11.709" Height="31" Background="{x:Null}" BorderThickness="0" FontFamily="Segoe UI Black" FontSize="16" Click="btnLogOut_Click"/>
+        <Button x:Name="btnLogOut" Content="Log Out" HorizontalAlignment="Left" Margin="0,379,0,0" VerticalAlignment="Top" Width="146" RenderTransformOrigin="-0.661,11.709" Height="31" Background="{x:Null}" BorderThickness="0" FontFamily="Segoe UI Black" FontSize="16" Click="btnLogOut_Click"/>
 
     </Grid>
+
+    <Window.Resources>
+        <Style TargetType="{x:Type Button}">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}" BorderBrush="Transparent">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="Transparent"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
 </Window>
